syntax = "proto3";

package proto.events;

option go_package = "api/pb";

import "google/protobuf/timestamp.proto";

message EventNew {
  string title = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  string description = 4;
  string user_id = 5;
  int64 notify_before_event = 6;
}

message Event {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  string description = 5;
  string user_id = 6;
  int64 notify_before_event = 7;
}
